# constrained_value

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  aspects.bzl  constrained_value.hpp
.github/workflows/: build_and_test.yml  ci.bazelrc  test.yml
private/: github_archive.bzl
src/: adaptor.hpp  algebra.hpp  assert_predicate.hpp  bitwise_integer.hpp  compare.hpp  constant.hpp  constrained_value.hpp  functional.hpp  math.hpp  predicate.hpp  projection.hpp  source_location.hpp  ulp.hpp  ulp_distance.hpp  violation_policy.hpp
src/detail/: priority.hpp  type_name.hpp
src/math/: numeric.hpp
test/: BUILD.bazel  assignable_test.cpp  constant_ulp_test.cpp  constructible_test.cpp  convertible_test.cpp  dummy.cpp  math_test.cpp  multiple_predicates_test.cpp  near_constrained_value_test.cpp  numeric_test.cpp  total_order_constrained_values_test.cpp  ulp_test.cpp  unit_constrained_value_test.cpp  unity_values_test.cpp  utility.hpp  violation_policy_test.cpp
