workspace(name = "constrained_value")

load("//private:github_archive.bzl", "github_archive")

github_archive(
    name = "bazel_bootlin",
    commit = "4ded1105ba0e2060003e6ac2660ff57815fe0296",
    repo = "oliverlee/bazel_bootlin",
    sha256 = "197a5408d571aa5b95001a9091c06aec55451bbd9b696d37dad122396b9d5652",
)

github_archive(
    name = "bazel_toolchain",
    commit = "66676d4084622dade997f9ccab6adc1a1d4543fd",
    repo = "oliverlee/bazel-toolchain",
    sha256 = "4d1d25d9f12277cd5f4911efbf73fda5aa223c6967fadea87c98f8a9ebc29234",
)

github_archive(
    name = "bazel_clang_format",
    commit = "cf230045617dc16ac550e3ba83521b1a7450d5fa",
    repo = "oliverlee/bazel_clang_format",
    sha256 = "4c687a2e04923af5fc9db6d3f8d2b9610288d08dc08d64d1a95d3da8019af0ed",
)

github_archive(
    name = "bazel_clang_tidy",
    commit = "8121a7bd2f31122da55edf06fcfbf5605017e0ec",
    repo = "oliverlee/bazel_clang_tidy",
    sha256 = "758295e3e386af2918c9ef906a39c2ad8f1a7c82dea7371938ab3c0e1d22e3cb",
)

github_archive(
    name = "boost_ut",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "boost_ut",
    hdrs = ["include/boost/ut.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
    commit = "7c667d99716eb25db3fabb0d9114c8ad46ad7464",
    repo = "boost-ext/ut",
    sha256 = "5f29c31bcbdb1083525ff536b1c09f211754424108fd6bf78a5412c3463eb98d",
)

CXXFLAGS = [
    "-std=c++20",
    "-fdiagnostics-color=always",
    "-Werror",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wconversion",
]

load("@bazel_bootlin//:defs.bzl", "bootlin_toolchain")

bootlin_toolchain(
    name = "gcc_x86-64_2022.08-1",
    architecture = "x86-64",
    buildroot_version = "2022.08-1",
    extra_cxxflags = CXXFLAGS,
)

register_toolchains(
    "@gcc_x86-64_2022.08-1//:toolchain",
)

load("@bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")
load("@bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")

bazel_toolchain_dependencies()

llvm_toolchain(
    name = "llvm_toolchain",
    cxx_flags = {"": ["-stdlib=libc++"] + CXXFLAGS},
    llvm_version = "15.0.6",
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()
