load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "assignable",
    size = "small",
    srcs = ["assignable_test.cpp"],
    deps = [
        "//:constrained_value",
        "@boost_ut",
    ],
)

cc_test(
    name = "constructible",
    size = "small",
    srcs = ["constructible_test.cpp"],
    deps = [
        "//:constrained_value",
        "@boost_ut",
    ],
)

cc_test(
    name = "convertible",
    size = "small",
    srcs = ["convertible_test.cpp"],
    deps = [
        "//:constrained_value",
        "@boost_ut",
    ],
)

cc_test(
    name = "multiple_predicates",
    size = "small",
    srcs = ["multiple_predicates_test.cpp"],
    deps = [
        "//:constrained_value",
        "@boost_ut",
    ],
)

cc_test(
    name = "violation_policy",
    size = "small",
    srcs = ["violation_policy_test.cpp"],
    deps = [
        "//:constrained_value",
        "@boost_ut",
    ],
)
